parameter efficient fine tuning
LoRA

--- a/fine_tunning.ipynb
+++ b/fine_tunning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -45,15 +45,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:09:46.973908200Z",
-     "start_time": "2023-10-02T07:09:40.362388200Z"
+     "end_time": "2023-10-02T12:04:30.627788600Z",
+     "start_time": "2023-10-02T12:04:24.010282500Z"
     }
    },
    "id": "2c642841f7cbfe92"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -120,19 +120,19 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:09:53.941958900Z",
-     "start_time": "2023-10-02T07:09:46.975906800Z"
+     "end_time": "2023-10-02T12:04:37.590092700Z",
+     "start_time": "2023-10-02T12:04:30.629788400Z"
     }
    },
    "id": "641cbcad1b17a4cb"
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
-    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer, GenerationConfig, TrainingArguments, Trainer\n",
+    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer, GenerationConfig, TrainingArguments, Trainer, Seq2SeqTrainingArguments, Seq2SeqTrainer\n",
     "import torch\n",
     "import time\n",
     "import evaluate\n",
@@ -142,21 +142,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:09:53.986760800Z",
-     "start_time": "2023-10-02T07:09:53.944336300Z"
+     "end_time": "2023-10-02T12:04:37.609223300Z",
+     "start_time": "2023-10-02T12:04:37.592087700Z"
     }
    },
    "id": "f11070547eab1ea9"
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
       "text/plain": "DatasetDict({\n    train: Dataset({\n        features: ['id', 'dialogue', 'summary', 'topic'],\n        num_rows: 12460\n    })\n    validation: Dataset({\n        features: ['id', 'dialogue', 'summary', 'topic'],\n        num_rows: 500\n    })\n    test: Dataset({\n        features: ['id', 'dialogue', 'summary', 'topic'],\n        num_rows: 1500\n    })\n})"
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,15 +170,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:09:57.471315200Z",
-     "start_time": "2023-10-02T07:09:53.958817Z"
+     "end_time": "2023-10-02T12:04:41.057019200Z",
+     "start_time": "2023-10-02T12:04:37.606226700Z"
     }
    },
    "id": "9d59ef847e4c1a"
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "model_name = 'google/flan-t5-small'\n",
@@ -189,8 +189,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:10:02.467951800Z",
-     "start_time": "2023-10-02T07:09:57.473313800Z"
+     "end_time": "2023-10-02T12:04:45.903969200Z",
+     "start_time": "2023-10-02T12:04:41.053019500Z"
     }
    },
    "id": "eeeba7a681bfe33d"
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -234,8 +234,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:10:02.486949600Z",
-     "start_time": "2023-10-02T07:10:02.467951800Z"
+     "end_time": "2023-10-02T12:04:45.919990800Z",
+     "start_time": "2023-10-02T12:04:45.906969300Z"
     }
    },
    "id": "b68b3ad0729a2ee5"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -320,8 +320,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:10:07.330729500Z",
-     "start_time": "2023-10-02T07:10:02.486949600Z"
+     "end_time": "2023-10-02T12:04:50.712631200Z",
+     "start_time": "2023-10-02T12:04:45.921990600Z"
     }
    },
    "id": "9596b15942e863b9"
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -354,7 +354,7 @@
     "    end_prompt = '\\n\\nSummary: '\n",
     "    prompt = [start_prompt + dialogue + end_prompt for dialogue in example[\"dialogue\"]]\n",
     "    # JS: const prompt = dialogueList.map(dialogue => startPrompt + dialogue + endPrompt);\n",
-    "    \n",
+    "    example['prompt'] = prompt\n",
     "    # Why padding is Max Length?\n",
     "    example['input_ids'] = tokenizer(prompt, padding=\"max_length\", truncation=True, return_tensors=\"pt\").input_ids\n",
     "    example['labels'] = tokenizer(example[\"summary\"], padding=\"max_length\", truncation=True, return_tensors=\"pt\").input_ids\n",
@@ -365,8 +365,8 @@
     "# The dataset actually contains 3 diff splits: train, validation, test.\n",
     "# The tokenize_function code is handling all data across all splits in batches.\n",
     "tokenized_datasets = dataset.map(tokenize_function, batched=True)\n",
-    "#print(tokenized_datasets['train'][200])\n",
-    "tokenized_datasets = tokenized_datasets.remove_columns(['id', 'topic', 'dialogue', 'summary',])\n",
+    "# print(tokenized_datasets['train'][200])\n",
+    "tokenized_datasets = tokenized_datasets.remove_columns(['id', 'topic', 'dialogue', 'summary', 'prompt'])\n",
     "print(tokenized_datasets['train'][200])\n",
     "\n",
     "# \n",
@@ -375,39 +375,39 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T07:25:01.373836100Z",
-     "start_time": "2023-10-02T07:25:01.316828700Z"
+     "end_time": "2023-10-02T12:04:50.755153100Z",
+     "start_time": "2023-10-02T12:04:50.711628900Z"
     }
    },
    "id": "ad9c2c4f6f168ee7"
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "outputs": [],
    "source": [
-    "output_dir = './dialogue-summary-training-full'\n",
+    "output_dir = './full-dialogue-summary-training'\n",
     "\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=output_dir,\n",
     "    learning_rate=1e-5,\n",
-    "    num_train_epochs=1,  # Increase the number of epochs for more training.\n",
+    "    num_train_epochs=10,  # Increase the number of epochs for more training.\n",
     "    weight_decay=0.01,\n",
-    "    logging_steps=1,   # Reduce the frequency of logging for better readability.\n",
+    "    logging_steps=200,   # Reduce the frequency of logging for better readability.\n",
     ")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T08:20:36.007294Z",
-     "start_time": "2023-10-02T08:20:35.983295200Z"
+     "end_time": "2023-10-02T12:04:50.769349Z",
+     "start_time": "2023-10-02T12:04:50.756153200Z"
     }
    },
    "id": "ed2c8d9084394509"
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -421,29 +421,43 @@
     "print(torch.cuda.is_available())\n",
     "\n",
     "import os\n",
-    "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"max_split_size_mb:512\""
+    "import nltk\n",
+    "os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"max_split_size_mb:512\"\n",
+    "nltk.download(\"punkt\", quiet=True)\n",
+    "metric = evaluate.load(\"rouge\")\n",
+    "\n",
+    "def compute_metrics(eval_preds):\n",
+    "    preds, labels = eval_preds\n",
+    "\n",
+    "    # decode preds and labels\n",
+    "    labels = np.where(labels != -100, labels, tokenizer.pad_token_id)\n",
+    "    decoded_preds = tokenizer.batch_decode(preds, skip_special_tokens=True)\n",
+    "    decoded_labels = tokenizer.batch_decode(labels, skip_special_tokens=True)\n",
+    "\n",
+    "    # rougeLSum expects newline after each sentence\n",
+    "    decoded_preds = [\"\\n\".join(nltk.sent_tokenize(pred.strip())) for pred in decoded_preds]\n",
+    "    decoded_labels = [\"\\n\".join(nltk.sent_tokenize(label.strip())) for label in decoded_labels]\n",
+    "\n",
+    "    result = metric.compute(predictions=decoded_preds, references=decoded_labels, use_stemmer=True)\n",
+    "    return result"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T08:20:37.294683500Z",
-     "start_time": "2023-10-02T08:20:37.269688Z"
+     "end_time": "2023-10-02T12:04:51.867930600Z",
+     "start_time": "2023-10-02T12:04:50.772863900Z"
     }
    },
    "id": "8a369c832853ba1a"
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shapes of the datasets:\n",
-      "Training: (12460, 2)\n",
-      "Validation: (500, 2)\n",
-      "Test: (1500, 2)\n",
       "Shapes of the datasets:\n",
       "Training: (12460, 2)\n",
       "Validation: (500, 2)\n",
@@ -457,61 +471,64 @@
     "print(f\"Validation: {tokenized_datasets['validation'].shape}\")\n",
     "print(f\"Test: {tokenized_datasets['test'].shape}\")\n",
     "\n",
-    "\n",
-    "# tokenized_datasets = tokenized_datasets.filter(lambda example, index: index % 100 == 0, with_indices=True)\n",
-    "\n",
-    "print(f\"Shapes of the datasets:\")\n",
-    "print(f\"Training: {tokenized_datasets['train'].shape}\")\n",
-    "print(f\"Validation: {tokenized_datasets['validation'].shape}\")\n",
-    "print(f\"Test: {tokenized_datasets['test'].shape}\")"
+    "# tokenized_datasets = tokenized_datasets.filter(lambda example, index: index % 100 == 0, with_indices=True)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T08:20:38.609110700Z",
-     "start_time": "2023-10-02T08:20:38.574111900Z"
+     "end_time": "2023-10-02T12:04:51.884037200Z",
+     "start_time": "2023-10-02T12:04:51.868933200Z"
     }
    },
    "id": "2187432e7f3a2724"
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "trainer = Trainer(\n",
     "    model=original_model,\n",
     "    args=training_args,\n",
+    "    tokenizer=tokenizer,\n",
     "    train_dataset=tokenized_datasets['train'],\n",
     "    eval_dataset=tokenized_datasets['validation']\n",
-    ")\n"
+    ")\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T08:20:41.421177300Z",
-     "start_time": "2023-10-02T08:20:41.281012700Z"
+     "end_time": "2023-10-02T12:04:55.206434800Z",
+     "start_time": "2023-10-02T12:04:51.885037200Z"
     }
    },
    "id": "fc92255f894fd78"
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a T5TokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "\n    <div>\n      \n      <progress value='2' max='1558' style='width:300px; height:20px; vertical-align: middle;'></progress>\n      [   2/1558 : < :, Epoch 0.00/1]\n    </div>\n    <table border=\"1\" class=\"dataframe\">\n  <thead>\n <tr style=\"text-align: left;\">\n      <th>Step</th>\n      <th>Training Loss</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table><p>"
+      "text/html": "\n    <div>\n      \n      <progress value='2' max='15580' style='width:300px; height:20px; vertical-align: middle;'></progress>\n      [    2/15580 : < :, Epoch 0.00/10]\n    </div>\n    <table border=\"1\" class=\"dataframe\">\n  <thead>\n <tr style=\"text-align: left;\">\n      <th>Step</th>\n      <th>Training Loss</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table><p>"
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "text/plain": "TrainOutput(global_step=1558, training_loss=41.76749037227214, metrics={'train_runtime': 390.4417, 'train_samples_per_second': 31.913, 'train_steps_per_second': 3.99, 'total_flos': 2316195688611840.0, 'train_loss': 41.76749037227214, 'epoch': 1.0})"
+      "text/plain": "TrainOutput(global_step=15580, training_loss=42.07952503209243, metrics={'train_runtime': 23397.0484, 'train_samples_per_second': 5.325, 'train_steps_per_second': 0.666, 'total_flos': 2.31619568861184e+16, 'train_loss': 42.07952503209243, 'epoch': 10.0})"
      },
-     "execution_count": 71,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,15 +539,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T08:27:14.152186500Z",
-     "start_time": "2023-10-02T08:20:42.797771Z"
+     "end_time": "2023-10-02T18:43:23.379714300Z",
+     "start_time": "2023-10-02T12:13:26.154460100Z"
     }
    },
    "id": "a048410e1f9745da"
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -561,7 +578,7 @@
       "\n",
       "---------------------------------------------------------------------------------------------------\n",
       "MODEL GENERATION - ZERO SHOT:\n",
-      "You'd like to have a new computer.\n",
+      "Do you have a CD-ROM drive?\n",
       "---------------------------------------------------------------------------------------------------\n",
       "MODEL GENERATION - FINE TUNED:\n",
       "You'd like to add a CD-ROM drive to your software.\n"
@@ -574,7 +591,7 @@
     "dialogue = dataset['test'][index]['dialogue']\n",
     "summary = dataset['test'][index]['summary']\n",
     "\n",
-    "instruct_model = AutoModelForSeq2SeqLM.from_pretrained(\"./dialogue-summary-training-full/checkpoint-1500\", torch_dtype=torch.bfloat16)\n",
+    "instruct_model = AutoModelForSeq2SeqLM.from_pretrained(\"./full-dialogue-summary-training/checkpoint-15500\", torch_dtype=torch.bfloat16)\n",
     "\n",
     "\n",
     "prompt = f\"\"\"\n",
@@ -615,8 +632,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-02T08:32:37.097261Z",
-     "start_time": "2023-10-02T08:32:18.266635500Z"
+     "end_time": "2023-10-02T21:39:17.711010200Z",
+     "start_time": "2023-10-02T21:39:00.020232800Z"
     }
    },
    "id": "5104b4dcc01bbd34"
@@ -627,10 +644,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-10-02T07:10:12.241278300Z"
-    }
+    "collapsed": false
    },
    "id": "91e8826faab9021b"
   }
