--- a/Lab_2_fine_tune_generative_ai_model.ipynb
+++ b/Lab_2_fine_tune_generative_ai_model.ipynb
@@ -1227,6 +1227,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
